# mettta-space

./: .gitignore  PRODUCT_OVERVIEW.md  package-lock.json  package.json
.github/workflows/: build-desktop-macos.yml  build-macos.yml  build-windows.yml
apps/desktop/: main.js  package.json  preload.js
apps/desktop/scripts/: build-web.js  tauri-build.js
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: eslint.config.mjs  package.json  tsconfig.json
apps/server/src/: index.ts  index.ts.main  logger.ts
apps/web/: index.html  package.json
apps/web/scripts/: build.mjs
apps/web/src/: App.css  App.tsx  App.tsx.bak  App.tsx.bak2  App.tsx.tmp  index.css
apps/web/src/components/: CalendarView.tsx  ChatPanel.tsx  LobbyList.tsx  ParticipantsGrid.tsx
apps/web/src/store/: useChatStore.ts
apps/web/src/utils/: logger.ts
apps/web/src/webrtc/: config.ts  media.ts  renegotiation.ts  screenShare.ts
deploy/: deploy.sh  nginx.conf  nginx.conf.example  nginx.conf.temp
docs/: macos-signing.md
