[package]
name = "mettta-desktop"
version = "0.0.1"
description = "mettta.space — встречи и чат (desktop)"
edition = "2021"
rust-version = "1.70"

[lib]
name = "mettta_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
